moved cordy to outside overflow hidden, fixed placeholder for images

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: "FatFrank";
-  src: url("/fonts/fonnts.com-FatFrank_Heavy.otf") format("otf");
+  src: url("/public/fonts/fonnts.com-FatFrank_Heavy.otf") format("otf");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
